--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rakesh Tyata
-logo: /assets/img/headshot_circle.png
-#description: text below image
+logo: /assets/img/rakesh_headshot.jpg
+description:  Software Engineer | Data Analyst | AI Enthusiast
 show_downloads: true
 theme: jekyll-theme-minimal
